--- a/Frontend/public/index.html
+++ b/Frontend/public/index.html
@@ -4,17 +4,17 @@
 <head>
   <meta charset="utf-8" />
   <title>GMCA TPO CELL</title>
-
+  <base href="/" /> <!-- for local host -->
   <!-- BOOTSTRAP STYLES-->
-  <link href="assets/css/bootstrap.css" rel="stylesheet" />
+  <!-- <link href="assets/css/bootstrap.css" rel="stylesheet" /> -->
   <!-- FONTAWESOME STYLES-->
-  <link href="assets/css/font-awesome.css" rel="stylesheet" />
+  <!-- <link href="assets/css/font-awesome.css" rel="stylesheet" /> -->
   <!--CUSTOM BASIC STYLES-->
-  <link href="assets/css/basic.css" rel="stylesheet" />
+  <!-- <link href="assets/css/basic.css" rel="stylesheet" /> -->
   <!--CUSTOM MAIN STYLES-->
-  <link href="assets/css/custom.css" rel="stylesheet" />
+  <!-- <link href="assets/css/custom.css" rel="stylesheet" /> -->
   <!-- GOOGLE FONTS-->
-  <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css' />
+  <!-- <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css' /> -->
 </head>
 
 <body>
@@ -25,11 +25,11 @@
   <!-- JQUERY SCRIPTS -->
   <!-- <script src="assets/js/jquery-1.10.2.js"></script> -->
   <!-- METISMENU SCRIPTS -->
-  <script src="assets/js/jquery.metisMenu.js"></script>
+  <!-- <script src="assets/js/jquery.metisMenu.js"></script> -->
   <!-- CUSTOM SCRIPTS -->
-  <script src="assets/js/custom.js"></script>
+  <!-- <script src="assets/js/custom.js"></script> -->
   <!-- BOOTSTRAP SCRIPTS -->
-  <script src="assets/js/bootstrap.js"></script>
+  <!-- <script src="assets/js/bootstrap.js"></script> -->
 </body>
 
 </html>
